refactor: project name and structure
