# api/internal/application/service/resource_service.go
@@ -2,8 +2,8 @@ package service
 
 import (
 	"context"
-	"github.com/rafaelcmd/cloud-ops-manager/api/internal/domain/model"
-	"github.com/rafaelcmd/cloud-ops-manager/api/internal/domain/ports/outbound"
+	"github.com/rafaelcmd/internal-developer-platform/api/internal/domain/model"
+	"github.com/rafaelcmd/internal-developer-platform/api/internal/domain/ports/outbound"
 )
 
 type ResourceService struct {
