# api/internal/domain/ports/inbound/resource_service.go
@@ -2,7 +2,7 @@ package inbound
 
 import (
 	"context"
-	"github.com/rafaelcmd/cloud-ops-manager/api/internal/domain/model"
+	"github.com/rafaelcmd/internal-developer-platform/api/internal/domain/model"
 )
 
 type ResourceService interface {
