# api/internal/domain/ports/outbound/resource_publisher.go
@@ -2,7 +2,7 @@ package outbound
 
 import (
 	"context"
-	"github.com/rafaelcmd/cloud-ops-manager/api/internal/domain/model"
+	"github.com/rafaelcmd/internal-developer-platform/api/internal/domain/model"
 )
 
 type ResourcePublisher interface {
